Arreglos en el Backend, mejores endpoints